# int8-vs-class

./: .gitignore  CMakeLists.txt  Int.h  README.md  benchInt.h  main.cpp
src/: benchCall.h  benchInt.h  err.h  main.cpp  platform.h  type.h
